--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta chasert="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikcraft</title>
   <link rel="stylesheet" href="./style.css">
 </head>
@@ -28,10 +29,12 @@
         <a href="/">VER MAIS</a>
       </div>
 
-      <img class="foto" src="./img/bicicleta.jpg" alt="">
+      <div class="foto-cover">
+        <img src="./img/bicicleta.jpg" alt="">
+      </div>
     </article>
 
-    <article class="conteudo" aria-labelledby="label-vantagens">
+    <article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
 
       <h2 class="subtitulo" id="label-vantagens"> VANTAGENS BIKCRAFT </h2>
 
